--- a/styles/2nd.css
+++ b/styles/2nd.css
@@ -48,6 +48,7 @@ nav{
 }
 
 /* header2 */
+
 .none{
     justify-content: space-between;
     margin:0 40px;
@@ -57,16 +58,67 @@ nav{
     font-size: 1.25rem;
 }
 
-/* color */
+/* main */
+/* sec0.5 */
+
+.sec0{
+      text-align: center; 
+      margin-top: 80px;
+}
+
+/* Sec1 */
+.plants{
+    align-items: center;
+}
+
+.sec1{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    justify-items: center;
+    margin: 0 12.5%;
+    margin-top: 25px;
+}
+.card{
+    margin: 0;
+    margin-top:10px;
+}
+.center1{
+    text-align: center;
+}
+
+/* sec2 */
+.sec2{
+    place-items:center;
+    justify-content: center;
+    gap: 5.5rem;
+    margin-top: 150px;
+}
+.li h2{
+    margin: 10px;
+}
+
+/* color & button & size */
 .dark-2{
     color:rgba(0, 0, 0, 0.5) ;
     font-size: 10px;
 }
 .dark-3{
-    color:gray
+    color:gray;
+    font-size: 15px;
 }
 .dark-4{
  color: #E95A08;
+}
+.button{
+    background-color: #E95A08;
+    color: aliceblue;
+    width: 180px;
+    padding: 10px 10px;
+
+}
+.size{
+    font-weight: 700;
+    font-size: 45px;
 }
 
 
@@ -86,6 +138,7 @@ nav{
 }
 
 @media screen and (max-width : 660px) {
+    /* header */
     .ha , .home{
         display: none;
     }
@@ -101,4 +154,19 @@ nav{
     font-weight: 700;
     font-size: 1.25rem;
 } 
+/* main-sec1 */
+.sec1{
+    grid-template-columns:repeat(2,1fr);
+}
+.center1{
+    text-align: center;
+}
+.sec2{
+    flex-direction: column;
+    margin-top: 120px;
+    gap: 10px;
+}
+.li h2{
+    margin: 0;
+}
 }
