--- a/styles/2nd.css
+++ b/styles/2nd.css
@@ -143,7 +143,26 @@ nav{
     background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../pic/deal-zabo.png)
     
 }
+/* sec5 */
 
+.bg-4{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-image: url(../pic/news-letter-bg.png);
+    height: 500px;
+    
+}
+.bg-4 p{
+    color: white;
+
+}
+.form{
+    width: 700px;
+    height: 1.9rem;
+
+}
 /* color & button & size */
 .dark-2{
     color:rgba(0, 0, 0, 0.5) ;
@@ -157,6 +176,8 @@ nav{
  color: #E95A08;
 }
 .button{
+    
+    border: 1px;
     background-color: #E95A08;
     color: aliceblue;
     width: 180px;
@@ -224,5 +245,18 @@ nav{
 }
 .bg-3{ height: 200px;
     width: 300px;
-    background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../pic/deal-zabo.png)
+    background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../pic/deal-zabo.png)}
+
+    /* sec5 */
+    .form{
+    width:15rem;
+    height: 1.9rem;}
+    .ii{
+         border: 1px;
+    background-color: #E95A08;
+    color: aliceblue;
+    width: 100px;
+    padding: 10px 10px
+    }
+
 }
