--- a/styles/2nd.css
+++ b/styles/2nd.css
@@ -163,14 +163,34 @@ nav{
     height: 1.9rem;
 
 }
+/* Footer */
+footer{
+    justify-content: space-around;
+    margin-top: 5rem;
+}
+footer .fdiv4 img{
+    padding: 1rem;
+}
+footer li{
+    list-style: none;
+    padding: .5rem;
+}
+footer a{
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.5);
+
+}
 /* color & button & size */
 .dark-2{
     color:rgba(0, 0, 0, 0.5) ;
     font-size: 10px;
 }
 .dark-3{
-    color:gray;
+    color:rgba(0, 0, 0, 0.5);
     font-size: 15px;
+}
+.dark-33{
+    color:rgba(36, 34, 34, 0.5) ;
 }
 .dark-4{
  color: #E95A08;
@@ -257,6 +277,11 @@ nav{
     color: aliceblue;
     width: 100px;
     padding: 10px 10px
+    }
+    /* footer */
+    footer{
+        flex-direction: column;
+        margin-left:2rem ;
     }
 
 }
