--- a/styles/2nd.css
+++ b/styles/2nd.css
@@ -91,7 +91,16 @@ nav{
     place-items:center;
     justify-content: center;
     gap: 5.5rem;
-    margin-top: 150px;
+    margin-top: 0;
+}
+.another{
+    gap: 7rem;
+}
+.runing{
+    position: relative;
+    top: 150px;
+    right: 50px;
+    
 }
 .li h2{
     margin: 10px;
@@ -165,8 +174,10 @@ nav{
 }
 /* Footer */
 footer{
-    justify-content: space-around;
+    justify-content:space-around;
     margin-top: 5rem;
+    padding: 0 8rem;
+    
 }
 footer .fdiv4 img{
     padding: 1rem;
@@ -250,10 +261,13 @@ footer a{
     text-align: center;
 }
 /* sec2 */
-.sec2{
+.another{
     flex-direction: column;
     margin-top: 120px;
     gap: 10px;
+}
+.runing{
+    display: none;
 }
 .li h2{
     margin: 0;
@@ -280,8 +294,15 @@ footer a{
     }
     /* footer */
     footer{
+        /* width: 100%; */
         flex-direction: column;
-        margin-left:2rem ;
+        /* margin-left:2rem ; */
+        justify-content: center;
+    }
+    .fdiv4 img{
+        padding:0;
+         width:7%;
+         height: 15%;
     }
 
 }
